# ternary-llm-experiments

./: .gitattributes  .gitignore  2026-05-14-200612-new-distill-idea-progressive-clamping.txt  README.md  autoresearch-dashboard.md  autoresearch-text-diffusion.ideas.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_gpt.ideas.md  autoresearch_gpt.jsonl  autoresearch_gpt.sh  check_run.sh  extract_best_for_run_e.py  pyproject.toml  run_hrm.sh  smollm-distill.md
docs/: index.html  main.js  worker.js
docs/model/: config.json  generation_config.json  tokenizer_config.json
experiments/: worklog.md
scripts/: check_hrm.py  inject_lossless.py  quantize_onnx.py
smollmer/: 2026-05-11-223728-log.txt  FINDINGS.md  __init__.py  amuse.py  build_student.py  cache_corpus_run.sh  cache_teacher.py  cache_teacher_corpus.py  calibrate.py  chat.py  chat_base.py  cmuon.py  distill.py  dump_for_chat.py  export_onnx.py  finalize.py  finalize_smooth.py  flip_distill.py  flip_progressive.py  flip_research.md  gpt_bop.py  gpt_model.py  gsq.py  hrm_bop.py  hrm_bop_spec.md  hrm_data.py  hrm_model.py  pack.py  permute.py  progressive-quantization.md  progressive_distill.py  qat_distill.py  qat_smooth.py  qlinear.py  teacher_floor.py
tb_gpt/g001-baseline-fastA-cmuon-ste/: events.out.tfevents.1781646773.wmertens-nixos.1590374.0
tools/: dump_interrupted.py
