[project]
name = "smollmer"
version = "0.1.0"
description = "Ternarize SmolLM2-135M via Bonsai-style per-row weights, distilled with an odd-level curriculum"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "safetensors>=0.4",
    "lion-pytorch>=0.2",
    "tqdm>=4.66",
    "numpy>=1.26",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
train = ["accelerate>=0.34"]

[project.scripts]
smollmer-cache    = "smollmer.cache_teacher:main"
smollmer-distill  = "smollmer.distill:main"
smollmer-finalize = "smollmer.finalize:main"
smollmer-chat     = "smollmer.chat:main"
smollmer-fix-ckpt = "smollmer.fix_checkpoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smollmer"]
